--- a/dynamic-stock-mng/src/main/resources/application.properties
+++ b/dynamic-stock-mng/src/main/resources/application.properties
@@ -12,13 +12,13 @@ spring.thymeleaf.mode=HTML5
 
 # database config
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/stock_db?useSSL=true
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/my_test?useSSL=false
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=123456
 
 
 # 替换 {your-number}  为当前座位编号
-spring.application.name=stock-mng-{your-number}
+spring.application.name=stock-mng-66
 
 ### 添加 Dashboard 客户端配置
-
+com.alipay.sofa.dashboard.client.enable=false
